<resources>
    <string name="app_name">WatchTower</string>
    <string name="Email_Hint">Your Email</string>
    <string name="Password_Hisnt">Enter Password</string>
    <string name="login_button">Login</string>
    <string name="Register_Button">Register</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
</resources>
