<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/reg_Email_feild"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:autofillHints="@string/Email_Hint"
        android:ems="10"
        android:hint="@string/Email_Hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_light_pressed"
        app:layout_constraintBottom_toTopOf="@+id/reg_pwd_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/reg_pwd_field"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="84dp"
        android:autofillHints="@string/Password_Hisnt"
        android:ems="10"
        android:hint="@string/Password_Hisnt"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_light_pressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reg_pwd_field2"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="84dp"
        android:autofillHints="@string/Password_Hisnt"
        android:ems="10"
        android:hint="@string/Password_Hisnt"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_light_pressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_Email_feild" />

    <TextView
            android:id="@+id/reg_Login_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:text="@string/app_name"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reg_Login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login_button"
        app:layout_constraintBottom_toTopOf="@+id/reg_Login_Reg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reg_Login_Reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/Register_Button"
        app:layout_constraintBottom_toTopOf="@+id/reg_Login_appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>